k8s/4/2/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend
  labels:
    app: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: wbitt/network-multitool
                  ports:
                    - containerPort: 80
