k8s/4/2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 80
