k8s/4/2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
  labels:
    app: frontend
spec:
    selector:
        app: frontend
    ports:
      - name: frontend
        protocol: TCP
        port: 80
        targetPort: 80
